Closed Bug 1750373 Opened 4 years ago Closed 4 years ago

Video elements with flipped x-axis are turned upside down (user video on meet.jit.si and similar)

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

RESOLVED FIXED
98 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox96 --- wontfix
firefox97 --- fixed
firefox98 --- fixed

People

(Reporter: rmader, Assigned: rmader)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files, 1 obsolete file)

From FF 96 on, users of WebRTC services that show the users own video flipped (so it looks like a mirror) will see that video upside down.

While this might be a pure duplicate of bug 1750146, maybe it isn't and we're missing certain buffer rotation values.

Regressed by: 1744117
Has Regression Range: --- → yes

This code never run before D132738. Turns out that the Wayland value
for flipped exactly matches the WR one.

The wrong value was set as before D118925, WL_OUTPUT_TRANSFORM_FLIPPED_180
was used in various places.

Assignee: nobody → robert.mader
Status: NEW → ASSIGNED

This code never run before D132738. Turns out that the Wayland value
for flipped exactly matches the WR one.

The wrong value was set as before D118925, WL_OUTPUT_TRANSFORM_FLIPPED_180
was used in various places.

Attachment #9259230 - Attachment is obsolete: true
Attachment #9259231 - Attachment description: Bug 1750373 - Use correct Wayland buffer transform value in SetBufferTransformFlipped, r=#gfx-reviewers → Bug 1750373 - Also support x-flips in SetBufferTransformFlipped(), r=#gfx-reviewers
Attachment #9259231 - Attachment description: Bug 1750373 - Also support x-flips in SetBufferTransformFlipped(), r=#gfx-reviewers → Bug 1750373 - Add support for x-flips in SetBufferTransformFlipped(), r=#gfx-reviewers
Pushed by robert.mader@posteo.de: https://hg.mozilla.org/integration/autoland/rev/7a9f266f68a5 Add support for x-flips in SetBufferTransformFlipped(), r=gfx-reviewers,mstange

Comment on attachment 9259231 [details]
Bug 1750373 - Add support for x-flips in SetBufferTransformFlipped(), r=#gfx-reviewers

Beta/Release Uplift Approval Request

  • User impact if declined: There is a small group of people who run the experimental compositor backend as their daily drivers, especially Wayland devs (including me) and enthusiasts, in order to find remaining bugs in Firefox or, importantly, Wayland compositors.

The bug fixed here makes video conferences via WebRTC quite unpleasant and irritating as the users own video will be shown upside down. As video conferences are indispensable for many people right now, chances are high that these valuable people will turn off the feature if the issue is not fixed soon.

  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The changes are completely contained in code that is only ever run when enabling the experimental backend. Also the code changes are very simple.
  • String changes made/needed:
Attachment #9259231 - Flags: approval-mozilla-beta?

Comment on attachment 9259231 [details]
Bug 1750373 - Add support for x-flips in SetBufferTransformFlipped(), r=#gfx-reviewers

Beta/Release Uplift Approval Request

  • User impact if declined: There is a small group of people who run the experimental compositor backend as their daily drivers, especially Wayland devs (including me) and enthusiasts, in order to find remaining bugs in Firefox or, importantly, Wayland compositors.

The bug fixed here makes video conferences via WebRTC quite unpleasant and irritating as the users own video will be shown upside down. As video conferences are indispensable for many people right now, chances are high that these valuable people will turn off the feature if the issue is not fixed soon. That could hamper further development.

  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The changes are completely contained in code that is only ever run when enabling the experimental backend. Also the code changes are very simple.
  • String changes made/needed:
Attachment #9259231 - Flags: approval-mozilla-release?
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 98 Branch

Confirmed fix on nightly now, updated uplift requests.

Set release status flags based on info from the regressing bug 1744117

Comment on attachment 9259231 [details]
Bug 1750373 - Add support for x-flips in SetBufferTransformFlipped(), r=#gfx-reviewers

Approved for 97.0b5. Thanks.

Attachment #9259231 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9259231 - Flags: approval-mozilla-release? → approval-mozilla-release-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: