Bug 1750373 - Add support for x-flips in SetBufferTransformFlipped(), r=gfx-reviewers,mstange a=dmeehan

Before D132738 Webrender only allowed y-flips on surfaces so `NativeLayerWayland`
ended up not implementing x-flips. However, we checked for the y-flip
via `HasNegativeScaling()`, which also applies to x-flips.
A common user of x-flips are WebRTC video conferencing services like
jitsi, which use it to make the users own video behave like a mirror.

After D132738, users of these services now see their own video upside
down instead. Amusing for some, seriously confusing for others.

Differential Revision: https://phabricator.services.mozilla.com/D136062